@@ -378,6 +378,8 @@ BEGIN
   IDS_MENUSENDEMAIL       "Send &email\tCtrl+E"
   IDS_MENUCOPYURL         "Copy URL to Clipboard"
   IDS_MENUCOPYEMAIL       "Copy Email to Clipboard"
+  IDS_SHOWTOOLBAR         "Show Toolbar"
+  IDS_HIDETOOLBAR         "Hide Toolbar"
 END
 
 STRINGTABLE
