@@ -56,17 +56,18 @@
 #define ID_MENUITEM_TREE_VIEW           32103
 #define ID_MENUITEM_NEW_TOOLBAR         32104
 #define ID_MENUITEM_OLD_TOOLBAR         32105
-#define ID_MENUITEM_EXPANDALL           32106
-#define ID_MENUITEM_COLLAPSEALL         32107
-#define ID_CHANGEFONTMENU               32108
-#define ID_MENUITEM_CHANGETREEFONT      32109
-#define ID_MENUITEM_CHANGEPSWDFONT      32110
-#define ID_REPORTSMENU                  32111
-#define ID_MENUITEM_REPORT_COMPARE      32112
-#define ID_MENUITEM_REPORT_IMPORTTEXT   32113
-#define ID_MENUITEM_REPORT_IMPORTXML    32114
-#define ID_MENUITEM_REPORT_MERGE        32115
-#define ID_MENUITEM_REPORT_VALIDATE     32116
+#define ID_MENUITEM_SHOWHIDE_TOOLBAR    32106
+#define ID_MENUITEM_EXPANDALL           32107
+#define ID_MENUITEM_COLLAPSEALL         32108
+#define ID_CHANGEFONTMENU               32109
+#define ID_MENUITEM_CHANGETREEFONT      32110
+#define ID_MENUITEM_CHANGEPSWDFONT      32111
+#define ID_REPORTSMENU                  32112
+#define ID_MENUITEM_REPORT_COMPARE      32113
+#define ID_MENUITEM_REPORT_IMPORTTEXT   32114
+#define ID_MENUITEM_REPORT_IMPORTXML    32115
+#define ID_MENUITEM_REPORT_MERGE        32116
+#define ID_MENUITEM_REPORT_VALIDATE     32117
 
 // Manage menu
 #define ID_MANAGEMENU                   32150
